Mon Feb  1 21:41:58 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/rubygems.rb, lib/rubygems/*, test/rubygems/*: Update rubygems-2.5.2.
	  It supports to enable frozen string literal and add `--norc` option for
	  disable to `.gemrc` configuration.
	  See 2.5.2 release notes for other fixes and enhancements.
	  https://github.com/rubygems/rubygems/blob/a8aa3bac723f045c52471c7b9328310a048561e0/History.txt#L3

Sun Jan 31 12:33:13 2016  Dan Kreiger  <dan@dankreiger.com>

	* test/drb/ut_large.rb (multiply, avg, median): add additional
	  math operations to DRbLarge.  [Fix GH-1086]

Sun Jan 31 12:19:15 2016  Kuniaki IGARASHI  <igaiga@gmail.com>

	* test/ruby/test_file_exhaustive.rb (test_lstat): Add lacking test
	  for File#lstat.  [Fix GH-1231]

Sun Jan 31 12:15:33 2016  Prayag Verma  <prayag.verma@gmail.com>

	* doc/standard_library.rdoc: fix typo  [Fix GH-1230]
	  Spelling mistakes -
	  outputing > outputting
	  publich > publish

Sat Jan 30 15:18:07 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (rb_check_funcall_with_hook): also should call the
	  given hook before returning Qundef when overridden respond_to?
	  method returned false.  [ruby-core:73556] [Bug #12030]

Fri Jan 29 17:40:07 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/file.c (rb_readlink): drop garbage after the substitute
	  name, as rb_w32_read_reparse_point returns the expected buffer
	  size but "\??\" prefix is dropped from the result.

	* win32/win32.c (w32_readlink): ditto, including NUL-terminator.

Fri Jan 29 17:07:27 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (fileattr_to_unixmode, rb_w32_reparse_symlink_p): volume
	  mount point should be treated as directory, not symlink.
	  [ruby-core:72483] [Bug #11874]

	* win32/win32.c (rb_w32_read_reparse_point): check the reparse point is
	  a volume mount point or not.

	* win32/file.c (rb_readlink): follow above change (but this pass won't
	  be used).
