@@ -1,5 +1,5 @@
-# frozen_string_literal: true
 # -*- coding: utf-8 -*-
+# frozen_string_literal: true
 #--
 # Copyright (C) 2004 Mauricio Julio Fernández Pradier
 # See LICENSE.txt for additional licensing information.
@@ -227,4 +227,3 @@ class Gem::Package::TarHeader
   end
 
 end
-
